# CMake_variable_to_code

./: README.md
add_compile_definitions_way/src/: CMakeLists.txt  main.cpp
configure_file_way/src/: CMakeLists.txt  GlobVarConfig.h.in  main.cpp
src/: CMakeLists.txt  main.h
